# RustGpt

./: .gitignore  Cargo.toml  README.md
src/: config.rs  dataset.rs  main.rs  model.rs
