[package]
name = "mini_gpt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.15.0"
anyhow = "1.0.81"
serde_json = "1.0.114"
clap = { version = "4.5.4", features = ["derive"] }
memmap2 = "0.9.4"

#[env]
#LIBTORCH = { value = "torch" , relative = true }
#DYLD_LIBRARY_PATH = { value = "torch/lib" , relative = true }